Fixed NPC start game button positioning. Fixed biel conversation bug. More conversation fixes.
Possibly fixed a weird bug with the NPC start game button being positioned weirdly but can only test this is fixed after building.

Fixed bug with Biel repeating conversation when player enters interact collision after doing his conversation.

Overall fixed some conversation bugs.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,6 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
 MultipleInstancePositions=(X=0,Y=0)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -353,7 +352,7 @@ AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Def
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 SceneComponent=
-SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+SceneComponent=
 ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
@@ -505,7 +504,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 ContentBrowserTab1.SelectedPaths=/Game/SFX/FX
-ContentBrowserTab1.SelectedPaths=/Game/UI/Diegetic/Main_Games
+ContentBrowserTab1.SelectedPaths=/Game/UI/Diegetic/Menus
 None=======
 None=======
 None=======
@@ -1636,6 +1635,14 @@ ExternalImagePicker.TimeStamp=2025.02.01-20.48.47
 ExternalImagePicker.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2025.02.01-20.48.48
 PhysicsAssetEditor.LastCompileMethod=Unknown
+VisualStudioTools.TimeStamp=2024.12.08-17.20.40
+VisualStudioTools.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2024.10.04-15.08.51
+LauncherServices.LastCompileMethod=Unknown
+TurnkeyIO.TimeStamp=2024.10.04-15.08.53
+TurnkeyIO.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2024.10.04-15.08.54
+UATHelper.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -1764,7 +1771,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 ABP_NPC_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -1847,9 +1854,9 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
-Character="\"Object\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Actor.Tags\" "
+BP_NPC_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 SpotLight="\"Object\" \"Object.Actor.Tags\" "
 Light="\"Object\" \"Object.Actor.Tags\" "
 RectLight="\"Object\" \"Object.Actor.Tags\" "
@@ -1993,6 +2000,13 @@ WBP_Auction_Prompts_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2011,18 +2025,11 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=WidgetBlueprintEditor
 None=======
 None=======
 None=======
@@ -2046,36 +2053,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
-MRUItem1=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
-MRUItem2=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem3=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem4=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
-MRUItem5=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
-MRUItem6=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
-MRUItem7=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
-MRUItem8=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem9=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
-MRUItem10=/Game/Movies/Glow_Final_Word
-MRUItem11=/Game/Movies/Startup_Vid
-MRUItem12=/Game/Player/Input/IMC/IMC_Rules
-MRUItem13=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem14=/Game/Player/Input/IMC/IMC_Pool
-MRUItem15=/Game/Player/Input/IMC/IMC_Main_Menu
-MRUItem16=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem17=/Game/Player/Input/IMC/IMC_Darts
-MRUItem18=/Game/Player/Input/IMC/IMC_Bar
-MRUItem19=/Game/Player/Input/IMC/IMC_Auction
-MRUItem20=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
-MRUItem21=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
-MRUItem22=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
-MRUItem23=/Game/NPCs/BPI_NPC_Opponent
-MRUItem24=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
-MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
-MRUItem26=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem27=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem28=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
-MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
+MRUItem0=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem1=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem2=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem3=/Game/NPCs/Animations/BP_End_Conversation
+MRUItem4=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/Maps/Main_Level/Main_Level
+MRUItem7=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
+MRUItem8=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
+MRUItem9=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
+MRUItem10=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
+MRUItem11=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
+MRUItem12=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
+MRUItem13=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
+MRUItem14=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
+MRUItem15=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
+MRUItem16=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
+MRUItem17=/Game/Movies/Glow_Final_Word
+MRUItem18=/Game/Player/Input/IMC/IMC_Rules
+MRUItem19=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem20=/Game/Player/Input/IMC/IMC_Pool
+MRUItem21=/Game/Player/Input/IMC/IMC_Main_Menu
+MRUItem22=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem23=/Game/Player/Input/IMC/IMC_Darts
+MRUItem24=/Game/Player/Input/IMC/IMC_Bar
+MRUItem25=/Game/Player/Input/IMC/IMC_Auction
+MRUItem26=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
+MRUItem27=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
+MRUItem28=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
+MRUItem29=/Game/NPCs/BPI_NPC_Opponent
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -4457,6 +4464,7 @@ None=======
 /Game/UI/Diegetic/Main_Games/WBP_Card_Display.WBP_Card_Display=1
 /Game/Environment/Street_Assets/Materials/graffiti_decals/wine1.wine1=1
 /Game/Environment/Street_Assets/Materials/graffiti_decals/wine.wine=1
+/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante.Zilia_13_to_Dante=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -4854,7 +4862,7 @@ PrimType=2
 ScreenPosition=X=278.000 Y=34.000
 ScreenPosition=X=313.000 Y=62.000
 ScreenPosition=X=384.000 Y=147.000
-ScreenPosition=X=40.800 Y=340.000
+ScreenPosition=X=1960.000 Y=134.000
 None=======
 None=======
 None=======
@@ -4863,11 +4871,11 @@ None=======
 WindowSize=X=1287.000 Y=909.000
 WindowSize=X=1306.000 Y=927.000
 WindowSize=X=1287.000 Y=909.000
-WindowSize=X=1396.800 Y=939.200
+WindowSize=X=1397.000 Y=940.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
+UNR=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/Maps/Main_Level
 BRUSH=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBX=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
@@ -4885,11 +4893,11 @@ LastDirectory=
 None=======
 None=======
 None=======
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
