Darts game active fix. So can play darts multiple times now.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -322,7 +322,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
@@ -2002,6 +2002,8 @@ AnimGraphNode_StateResult="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2010,7 +2012,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -2031,7 +2032,6 @@ RecentAssetEditors=MediaSourceEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 None=======
 None=======
 None=======
@@ -2041,6 +2041,7 @@ None=======
 None=======
 None=======
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board.BP_Dart_Board
 OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -2057,36 +2058,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem1=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem4=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem5=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem7=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem8=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem9=/Game/Player/BP_Player
-MRUItem10=/Game/Maps/Main_Level/Main_Level
-MRUItem11=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem12=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem13=/Game/NPCs/Animations/BP_End_Conversation
-MRUItem14=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem15=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
-MRUItem16=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
-MRUItem17=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem18=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem19=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
-MRUItem20=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
-MRUItem21=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
-MRUItem22=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
-MRUItem23=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem24=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
-MRUItem25=/Game/Movies/Glow_Final_Word
-MRUItem26=/Game/Player/Input/IMC/IMC_Rules
-MRUItem27=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem28=/Game/Player/Input/IMC/IMC_Pool
-MRUItem29=/Game/Player/Input/IMC/IMC_Main_Menu
+MRUItem0=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem1=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
+MRUItem2=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem4=/Game/NPCs/BP_NPC
+MRUItem5=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem6=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem7=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem8=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem9=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem10=/Game/Player/BP_Player
+MRUItem11=/Game/Maps/Main_Level/Main_Level
+MRUItem12=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem13=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem14=/Game/NPCs/Animations/BP_End_Conversation
+MRUItem15=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem16=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
+MRUItem17=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
+MRUItem18=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
+MRUItem19=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
+MRUItem20=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
+MRUItem21=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
+MRUItem22=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
+MRUItem23=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
+MRUItem24=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
+MRUItem25=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
+MRUItem26=/Game/Movies/Glow_Final_Word
+MRUItem27=/Game/Player/Input/IMC/IMC_Rules
+MRUItem28=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem29=/Game/Player/Input/IMC/IMC_Pool
 
 [DetailCategories]
 GeneralProjectSettings.About=True
