--- a/Project_7_Sins/Saved/Config/WindowsEditor/Game.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/Game.ini
@@ -1,4 +1,4 @@
 [/Script/DeveloperToolSettings.PlatformsMenuSettings]
 StagingDirectory=(Path="C:/Users/harry/Documents/Uni/Advanced Specialised Project")
-PerPlatformBuildConfig=(("Windows", PPBC_DebugGame))
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
 
