--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -335,7 +335,7 @@ MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BrushComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SkeletalMeshComponent=
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 None=======
@@ -352,7 +352,7 @@ AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Def
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 SceneComponent=
-SceneComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+SceneComponent=
 ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
@@ -386,7 +386,7 @@ Actor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValue
 Actor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 DecalActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 MeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-BP_Dart_Board_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+BP_Dart_Board_C=
 BP_Player_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 BP_Pool_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 NPC Hit Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -1797,8 +1797,8 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 WBP_Drink_Names_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object\" "
 WBP_NPC_Game_Availability_Indicator_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_Dialogue_Link_C="\"Object\" "
@@ -2008,20 +2008,22 @@ BP_Dart_Board_C=
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2030,13 +2032,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 None=======
 None=======
 None=======
@@ -2045,6 +2045,18 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/NPCs/Animations/BP_Dialogue_Link.BP_Dialogue_Link
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator
+OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/BP_Jukebox.BP_Jukebox
+OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager.BP_NPC_Conversation_Manager
+OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
+OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2060,36 +2072,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/BP_NPC
-MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem2=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
-MRUItem3=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem4=/Game/NPCs/BPI_NPC_Opponent
-MRUItem5=/Game/NPCs/Animations/BP_End_Character_Specific_Action
-MRUItem6=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Card_Counter
-MRUItem8=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem9=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
-MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
-MRUItem11=/Game/NPCs/Animations/BP_Action
-MRUItem12=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem13=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
-MRUItem14=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem15=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem16=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem17=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem18=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem19=/Game/Player/BP_Player
-MRUItem20=/Game/Maps/Main_Level/Main_Level
-MRUItem21=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem22=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem23=/Game/NPCs/Animations/BP_End_Conversation
-MRUItem24=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem25=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
-MRUItem26=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
-MRUItem27=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem28=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem29=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
+MRUItem0=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
+MRUItem1=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem4=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/NPCs/BPI_NPC_Opponent
+MRUItem7=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem8=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem9=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem10=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem11=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem12=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem13=/Game/NPCs/Decision_Making/BPC_NPC_Decision_Mind
+MRUItem14=/Game/NPCs/Animations/BP_End_Character_Specific_Action
+MRUItem15=/Game/UI/Diegetic/Main_Games/WBP_Card_Counter
+MRUItem16=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
+MRUItem17=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
+MRUItem18=/Game/NPCs/Animations/BP_Action
+MRUItem19=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
+MRUItem20=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem21=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem22=/Game/Player/BP_Player
+MRUItem23=/Game/Maps/Main_Level/Main_Level
+MRUItem24=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem25=/Game/NPCs/Animations/BP_End_Conversation
+MRUItem26=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem27=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
+MRUItem28=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
+MRUItem29=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3967,6 +3979,9 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+BP_Rat_Screw_Game_Manager_C.Display Interactions=True
+BP_Rat_Screw_Game_Manager_C.Active Uniques?=True
+BP_Rat_Screw_Game_Manager_C.UI=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
