--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -394,7 +394,7 @@ NPC Hit Ball_23=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.De
 BP_PoolBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 Find Closest Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 Find Closest Ball_23=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-BP_CueBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+BP_CueBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 End Turn and Check Results=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
@@ -453,6 +453,8 @@ IDI Decide=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Default
 Doubt Decide=
 Doubt Decide_8=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 Show Rules=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+ProjectileMovementComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
+MovementComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -509,7 +511,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 ContentBrowserTab1.SelectedPaths=/Game/SFX/FX
-ContentBrowserTab1.SelectedPaths=/Game/NPCs
+ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 None=======
 None=======
 None=======
@@ -1652,7 +1654,7 @@ UATHelper.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Velocity.Velocity\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1795,7 +1797,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Velocity.Velocity\" "
 WBP_Drink_Names_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalBarImage\" \"Object.Style.WidgetStyle.NormalBarImage.ImageSize\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredBarImage\" \"Object.Style.WidgetStyle.HoveredBarImage.ImageSize\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.ImageSize\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1931,7 +1933,7 @@ BP_Player_C="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-MovementComponent="\"Object\" "
+MovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
 GroupActor="\"Object\" "
 BP_Cat_C=
 ClothPaintTool_SmoothSettings="\"Object\" "
@@ -2005,10 +2007,14 @@ AnimGraphNode_StateResult="\"Object\" "
 BPC_NPC_Decision_Mind_C="\"Object\" "
 BP_Dart_Board_C=
 BackgroundBlur="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ProjectileMovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2036,9 +2042,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 None=======
 None=======
 None=======
@@ -2047,6 +2050,9 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall
+OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart.BP_Dart
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_CueBall.BP_CueBall
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2062,36 +2068,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/BP_Player
-MRUItem1=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
-MRUItem2=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem3=/Game/Player/Input/IMC/IMC_Rules
-MRUItem4=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
-MRUItem5=/Game/UI/Diegetic/Menus/WBP_Options
-MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem7=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem8=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
-MRUItem9=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem10=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem11=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
-MRUItem12=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Darts_Prompts
-MRUItem13=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
-MRUItem14=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
-MRUItem15=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem16=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem17=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem18=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem19=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem20=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
-MRUItem21=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem22=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem23=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem24=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem25=/Game/NPCs/BP_NPC
-MRUItem26=/Game/NPCs/BPI_NPC_Opponent
-MRUItem27=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem28=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem0=/Game/Mini_Games/Pool/BP_CueBall
+MRUItem1=/Game/Mini_Games/Darts/BP_Dart
+MRUItem2=/Game/Mini_Games/Pool/BP_PoolBall
+MRUItem3=/Game/Player/BP_Player
+MRUItem4=/Game/Shared_Game_Mechanics/Rules/BP_Rules_Manager
+MRUItem5=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem6=/Game/Player/Input/IMC/IMC_Rules
+MRUItem7=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem8=/Game/UI/Diegetic/Menus/WBP_Options
+MRUItem9=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem10=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
+MRUItem11=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
+MRUItem12=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
+MRUItem13=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
+MRUItem14=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
+MRUItem15=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Darts_Prompts
+MRUItem16=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
+MRUItem17=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
+MRUItem18=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem19=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem20=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem21=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem22=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem23=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
+MRUItem24=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem25=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem26=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem27=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem28=/Game/NPCs/BP_NPC
+MRUItem29=/Game/NPCs/BPI_NPC_Opponent
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3993,6 +3999,30 @@ BP_Rules_Manager_C.HLOD=True
 BP_Rules_Manager_C.Physics=True
 BP_Rules_Manager_C.WorldPartition=True
 BP_Rules_Manager_C.Events=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+ProjectileMovementComponent.Replication=False
+ProjectileMovementComponent.AssetUserData=False
+ProjectileMovementComponent.Navigation=False
+ActorComponent.ComponentTick=True
+ActorComponent.Tags=True
+ActorComponent.ComponentReplication=True
+ActorComponent.Variable=True
+ActorComponent.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -4250,7 +4280,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
-/Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
+/Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=0
 /Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC=1
 /Game/NPCs/BP_NPC.BP_NPC=1
 /Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names.WBP_Drink_Names=1
@@ -4424,7 +4454,7 @@ None=======
 /Game/Environment/Cards_Materials/Master_Cards.Master_Cards=1
 /Game/SFX/FX/11_Pool_ball_hit/PoolBall_Hit_Cue.PoolBall_Hit_Cue=1
 /Game/SFX/FX/18_Darts/Dart_Hit_Cue.Dart_Hit_Cue=1
-/Game/Mini_Games/Darts/BP_Dart.BP_Dart=1
+/Game/Mini_Games/Darts/BP_Dart.BP_Dart=0
 /Game/SFX/SA_SFX.SA_SFX=1
 /Game/SFX/FX/2_Doubt_correct_and_doubt_incorrect/Correct/Doubt_Correct_Cue.Doubt_Correct_Cue=1
 /Game/SFX/FX/2_Doubt_correct_and_doubt_incorrect/Incorrect/Doubt_Incorrect_Cue.Doubt_Incorrect_Cue=1
@@ -4549,6 +4579,9 @@ GameMapsSettings.DefaultModes=False
 GameMapsSettings.DefaultMaps=False
 FileMediaSource.File=True
 EdGraph.Graph=True
+ProjectileMovementComponent.Replication=False
+ProjectileMovementComponent.ProjectileBounces=False
+ProjectileMovementComponent.ProjectileInterpolation=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -4951,11 +4984,11 @@ LastDirectory=
 None=======
 None=======
 None=======
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
