--- a/Project_7_Sins/Config/DefaultEngine.ini
+++ b/Project_7_Sins/Config/DefaultEngine.ini
@@ -20,7 +20,7 @@ r.MinScreenRadiusForCSMDepth=0.010000
 r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
-r.VirtualTextures=False
+r.VirtualTextures=True
 r.VT.EnableAutoImport=True
 r.VirtualTexturedLightmaps=False
 r.VT.AnisotropicFiltering=False
@@ -42,7 +42,7 @@ r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=0
+r.Shadow.Virtual.Enable=1
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.UseTextureLod=False
